<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".activitiesSignIn.activitySignIn.ActivitySignIn"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back_image_view"
        android:src="@mipmap/icon_back"
        android:contentDescription="@string/icon_back"

        android:layout_gravity="start"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:text="@string/sign_in_sign_in"
        android:fontFamily="@font/sen_bold"
        android:textColor="@color/black"
        android:textSize="30sp"

        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:text="@string/sign_in_please_sign_in_to_your_existing_account"
        android:fontFamily="@font/sen_regular"
        android:textColor="@color/text"
        android:textSize="16sp"

        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp" />

    <TextView
        android:labelFor="@id/email_edit_text"
        android:text="@string/sign_in_email"
        android:fontFamily="@font/sen_regular"
        android:textColor="@color/text"
        android:textSize="14sp"

        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="35dp" />

    <EditText
        android:id="@+id/email_edit_text"
        android:autofillHints="sign_in_email"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/sen_regular"
        android:textColor="@color/text"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:background="@drawable/auth_text_field_background"

        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:labelFor="@id/password_edit_text"
        android:text="@string/sign_in_password"
        android:fontFamily="@font/sen_regular"
        android:textColor="@color/text"
        android:textSize="14sp"

        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="35dp" />

    <EditText
        android:id="@+id/password_edit_text"
        android:autofillHints="sign_in_password"
        android:inputType="textPassword"
        android:fontFamily="@font/sen_regular"
        android:textColor="@color/text"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:background="@drawable/auth_text_field_background"

        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/forgot_password_text_view"
        android:text="@string/sign_in_did_you_forget_your_password"
        android:fontFamily="@font/sen_semibold"
        android:textColor="@color/primary"
        android:textSize="14sp"

        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="TextContrastCheck" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_animation"
        android:visibility="gone"
        app:lottie_rawRes="@raw/loading"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"

        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/enter_button"
        android:text="@string/sign_in_enter"
        android:fontFamily="@font/sen_bold"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:background="@drawable/auth_button_background"

        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:orientation="horizontal"

        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/sing_in_don_t_have_an_account"
            android:fontFamily="@font/sen_semibold"
            android:textColor="@color/text"
            android:textSize="14sp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/sign_up_text_view"
            android:text="@string/sign_in_sing_up"
            android:fontFamily="@font/sen_semibold"
            android:textColor="@color/primary"
            android:textSize="14sp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</LinearLayout>