<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/custom_dialog_rounded_background"

    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="30dp"
    android:paddingBottom="30dp">

    <ImageView
        android:id="@+id/dialog_icon"
        android:contentDescription="@string/custom_dialog_icon"
        android:src="@mipmap/icon_custom_dialog_info"
        android:layout_gravity="center"

        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/dialog_type"
        android:fontFamily="@font/sen_bold"
        android:text="@string/custom_dialog_type"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:gravity="center"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/dialog_message"
        android:fontFamily="@font/sen_regular"
        android:text="@string/custom_dialog_message"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/dialog_button"
        android:background="@drawable/custom_dialog_button_background"
        android:text="@string/custom_dialog_accept"
        android:fontFamily="@font/sen_bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"

        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"/>
</LinearLayout>