<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_main_layout"
    android:background="@color/white"
    tools:context=".activitiesSignIn.activitySignInForgotPassword.ActivitySignInForgotPassword"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/back_image_view"
        android:src="@mipmap/icon_back"
        android:contentDescription="@string/icon_back"

        android:layout_gravity="start"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:text="@string/sign_in_forgot_password_forgot_password"
        android:fontFamily="@font/sen_bold"
        android:textColor="@color/black"
        android:textSize="30sp"

        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:text="@string/sign_in_forgot_password_please_write_your_existing_account"
        android:fontFamily="@font/sen_regular"
        android:textColor="@color/text"
        android:textSize="16sp"

        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp" />

    <TextView
        android:labelFor="@+id/email_edit_text"
        android:text="@string/sign_in_forgot_password_email"
        android:fontFamily="@font/sen_regular"
        android:textColor="@color/text"
        android:textSize="14sp"

        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="35dp" />

    <EditText
        android:id="@+id/email_edit_text"
        android:autofillHints="sign_in_forgot_password_email"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/sen_regular"
        android:textColor="@color/text"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:background="@drawable/auth_text_field_background"

        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp" />

    <Button
        android:id="@+id/send_code_button"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/auth_button_background"

        android:fontFamily="@font/sen_bold"
        android:text="@string/sign_in_forgot_password_send_code"
        android:textColor="@color/white"
        android:textSize="14sp"
        tools:ignore="TextContrastCheck" />

</LinearLayout>
